--- a/Informatica/informatica.html
+++ b/Informatica/informatica.html
@@ -101,8 +101,8 @@
 
 <div class="js-page" id="mainView" onload="reloadPage()">
 <div style="height: fit-content; margin: 25px;">
-  <button id="btnAnterior" onclick="navigation(--atual)" class="js-button" style="float: left; display: none;">Anterior</button>
-  <button id="btnProxima" onclick="navigation(++atual)" class="js-button" style="float: right;">Próxima</button>
+  <button id="btnAnterior" onclick="navigation(--postAtual)" class="js-button" style="float: left; display: none;">Anterior</button>
+  <button id="btnProxima" onclick="navigation(++postAtual)" class="js-button" style="float: right;">Próxima</button>
 </div>
 
 <iframe id="0" class="js-post-frame" src="000/intro.html"  width="100%"  scrolling="no" height="1420" style="display: block;"></iframe>
