--- a/index.html
+++ b/index.html
@@ -38,10 +38,60 @@
     }
   </style>
 </nav>
+<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................<br>.......................
 
-<div class="js-banner">
 
+<button class="js-button" onclick="document.getElementById('modal').style.display = 'block'">Abrir</button>
+
+<div id="modal">
+  <div id="modal-content">
+    <span id="close" onclick="(document.getElementById('modal').style.display = 'none')">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
 </div>
+
+<style>
+  #modal {
+    display: none;
+    position: fixed;
+    z-index: 8000;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #0000;
+    backdrop-filter: blur(10px);
+  }
+  #modal * {
+    color: #222;
+  }
+  #modal-content {
+    background-color: #ddd;
+    margin: auto;
+    border: 2px solid #FB0;
+    width: 70%;
+    padding: 25px;
+  }
+  #close {
+    color: darkred;
+    float: right;
+    font-size: 35px;
+    font-weight: bolder;
+    cursor: pointer;
+  }
+  #close:hover {
+    color: black;
+  }
+  
+</style>
+
+<div>
+  <br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................<br>.......................................
+</div>
+
+
 </html>
 
 <div class="js-footer">
