--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
   <!--SEO-->
   <meta name="author" content="Jorge Souza Oliveira dos Santos"/>
   <meta name="description" content="Jorge Souza Oliveira dos Santos">
-  <meta name="keywords" content="informatica, curso, computador, computacao, programação, desenvolvimento, web, design">
+  <meta name="keywords"
+    content="informatica, curso, computador, computacao, programação, tecnologia, info, 
+    desenvolvimento, web, design, web design, design grafico, tech, 
+    visual studio, visual studio code, vs code, c#, javascript, dotnet,
+    node js, dev express, html, css">
 </head>
 
-
-<nav class="js-nav">
+<div class="js-nav">
   <ul>
-    <li><a href="https://www.jorgesouza.com.br/">Início</a></li>
-    <li class="js-drop-button">
+    <li tabindex="1"><a href="https://www.jorgesouza.com.br/">Início</a></li>
+    <li class="js-drop-button" tabindex="2">
       <a>Aprendizado <i class="seta"></i></a>
       <div class="js-drop-content">
         <a href="informatica/intro.html">Informática</a>
@@ -35,7 +38,7 @@
         <a>4. Jogos</a>
       </div>
     </li>
-    <li><a>Apostilas</a></li>
+    <li tabindex="3"><a>Apostilas</a></li>
   </ul>
   <style>
     .seta {
@@ -48,9 +51,9 @@
       margin: auto 5px auto 5px;
     }
   </style>
+</div>
 
-</nav>
-  <div class="imgSlider">
+  <div class="img-slider">
     <a href="#" class="banner"><img id="img4" src="files/capa4.webp" alt=""></a>
     <a href="#" class="banner"><img id="img3" src="files/capa3.webp" alt=""></a>
     <a href="#" class="banner"><img id="img2" src="files/capa2.webp" alt=""></a>
@@ -94,7 +97,7 @@
     animation-iteration-count: infinite;
     animation-delay: 30s;
   }
-  .imgSlider {
+  .img-slider {
     background-color: black;
     height: fit-content;
     display: grid;
@@ -113,7 +116,7 @@
 </style>
 
 
-  <div>
+<div>
   <div style="padding: 25px 10% 25px 10%;">
     <h3>Formação</h3>
     <ul>
@@ -147,58 +150,43 @@
   </div>
 </div>
 
-
-
-
-
-</html>
-
 <div class="js-footer">
-  <table>
-    <tr>
-      <td>
-        <tit>Manuais e Apostilas</tit>
-      </td>
-      <td>
-        <tit>Aprendizado On-Line</tit>
-      </td>
-      <td>
-        <tit>Contato</tit>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <par onclick="window.location.replace(`#`)">Informática Básica e Avançada</par>
-        <par onclick="window.location.replace(`#`)">Design Gráfico</par>
-        <par onclick="window.location.replace(`#`)">Web Design (HTML e CSS)</par>
-        <par onclick="window.location.replace(`#`)">Javascript (Front-End e Back-End)</par>
-        <par onclick="window.location.replace(`#`)">Programação de Gráficos e Multimídia</par>
-        <par onclick="window.location.replace(`#`)">Programação para PC Desktop</par>
-        <par onclick="window.location.replace(`#`)">Desenvolvimento de Apps Móveis</par>
-        <par onclick="window.location.replace(`#`)">Desenvolvimento de Jogos</par>
-      </td>
-      <td>
-        <par onclick="window.location.replace(`Informatica/informatica.html`)">Informática Básica e Avançada</par>
-        <par onclick="window.location.replace(`#`)">Design Gráfico</par>
-        <par onclick="window.location.replace(`Web Design/webdesign.html`)">Web Design (HTML e CSS)</par>
-        <par onclick="window.location.replace(`#`)">Javascript (Front-End e Back-End)</par>
-        <par onclick="window.location.replace(`#`)">Programação de Gráficos e Multimídia</par>
-        <par onclick="window.location.replace(`#`)">Programação para PC Desktop</par>
-        <par onclick="window.location.replace(`#`)">Desenvolvimento de Apps Móveis</par>
-        <par onclick="window.location.replace(`#`)">Desenvolvimento de Jogos</par>
-      </td>
-      <td>
-        <par onclick="window.open(`mailto:jorge.sos777@gmail.com`)">Gmail</par>
-        <par onclick="window.open(`https://wa.me/5577991161892`)">Whatsapp</par>
-        <par onclick="window.open(`https://join.skype.com/invite/uMbQf0utKfUz`)">Skype</par>
-        <par onclick="window.open(`https://www.facebook.com/artesgraficaseprojetos`)">Facebook</par>
-        <par onclick="window.open(`https://www.instagram.com/jorgeoliveiraonline/`)">Instagram</par>
-        <par onclick="window.open(`https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5`)">Workana (Freelancer)</par>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <img src="files/logo_amarela.svg" style="pointer-events: none; vertical-align: middle; border: none; background-color: transparent; width: 40px; display: inline-block; margin: auto;"/>
-  <tit style="vertical-align: middle; text-align: center; padding: 20px; display: inline-block;">Copyright © 2022 - Jorge Souza Oliveira dos Santos</tit>
+  <div style="min-width: 300px;">
+    <tit>Aprendizado On-Line</tit>
+    <par onclick="window.location.replace(`https://www.jorgesouza.com.br/informatica/intro.html`)">Informática Básica e Avançada</par>
+    <par onclick="window.location.replace(`#`)">Design Gráfico</par>
+    <par onclick="window.location.replace(`#`)">Web Design (HTML e CSS)</par>
+    <par onclick="window.location.replace(`#`)">Javascript (Front-End e Back-End)</par>
+    <par onclick="window.location.replace(`#`)">Programação de Gráficos e Multimídia</par>
+    <par onclick="window.location.replace(`#`)">Programação para PC Desktop</par>
+    <par onclick="window.location.replace(`#`)">Desenvolvimento de Apps Móveis</par>
+    <par onclick="window.location.replace(`#`)">Desenvolvimento de Jogos</par>
+  </div>
+  <div style="min-width: 300px;">
+    <tit>Manuais e Apostilas</tit>
+    <par onclick="window.location.replace(`Informatica/informatica.html`)">Informática Básica e Avançada</par>
+    <par onclick="window.location.replace(`#`)">Design Gráfico</par>
+    <par onclick="window.location.replace(`Web Design/webdesign.html`)">Web Design (HTML e CSS)</par>
+    <par onclick="window.location.replace(`#`)">Javascript (Front-End e Back-End)</par>
+    <par onclick="window.location.replace(`#`)">Programação de Gráficos e Multimídia</par>
+    <par onclick="window.location.replace(`#`)">Programação para PC Desktop</par>
+    <par onclick="window.location.replace(`#`)">Desenvolvimento de Apps Móveis</par>
+    <par onclick="window.location.replace(`#`)">Desenvolvimento de Jogos</par>
+  </div>
+  <div style="min-width: 300px;">
+    <tit>Contato</tit>
+    <par onclick="window.open(`mailto:jorge.sos777@gmail.com`)">Gmail</par>
+    <par onclick="window.open(`https://wa.me/5577991161892`)">Whatsapp</par>
+    <par onclick="window.open(`https://join.skype.com/invite/uMbQf0utKfUz`)">Skype</par>
+    <par onclick="window.open(`https://www.facebook.com/artesgraficaseprojetos`)">Facebook</par>
+    <par onclick="window.open(`https://www.instagram.com/jorgeoliveiraonline/`)">Instagram</par>
+    <par onclick="window.open(`https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5`)">Workana (Freelancer)</par>
+  </div>
+  <div style="min-width: 90%;">
+    <hr style="width: 90%; margin: 25px auto 25px auto">
+    <img src="files/logo_amarela.svg" style="pointer-events: none; border: none; background-color: transparent; width: 40px; display: block; margin: auto; align-self: center;"/>
+    <tit style="align-self: center; text-align: center; padding: 20px; display: block;">Copyright © 2022 - Jorge Souza Oliveira dos Santos</tit>
+  </div>
 </div>
 
+</html>
