--- a/informatica/0.html
+++ b/informatica/0.html
@@ -6,110 +6,96 @@
   <link rel="stylesheet" href="../css/index.css">
   <script src="../javascript/index.js"></script>
   <script src="blog.js"></script>
-  <link rel="icon" type="image/x-icon" href="logo.svg">
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--SEO-->
   <meta name="author" content="Jorge Souza Oliveira dos Santos" />
   <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="keywords" content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
 </head>
 
 <menu-bar></menu-bar>
-<div class="js-side-left" onload="postCount = 56">
-  <a onclick="navigateTo(0)">Introdução</a>
-    <p>O Computador</p>
-  <a onclick="navigateTo(1)">O que é um Computador</a>
-  <a onclick="navigateTo(2)">Software e Hardware</a>
-  <a onclick="navigateTo(3)">Gabinete e Periféricos</a>
-  <a onclick="navigateTo(4)">Processador</a>
-  <a onclick="navigateTo(5)">Placa Mãe</a>
-  <a onclick="navigateTo(6)">Disco Rígido e Disco Sólido</a>
-  <a onclick="navigateTo(7)">Memória RAM</a>
-    <p>Introdução ao Windows</p>
-  <a onclick="navigateTo(8)">Um pouco de História</a>
-  <a onclick="navigateTo(9)">O Conceito de Janela</a>
-  <a onclick="navigateTo(10)">Área de Trabalho</a>
-  <a onclick="navigateTo(11)">Mouse</a>
-  <a onclick="navigateTo(12)">Barra de Tarefas e Menu Iniciar</a>
-  <a onclick="navigateTo(13)">Configurações do Windows</a>
-  <a onclick="navigateTo(14)">Explorador de Arquivos</a>
-  <a onclick="navigateTo(15)">Teclado</a>
-  <a onclick="navigateTo(16)">Unidades de Armazenamento</a>
-  <a onclick="navigateTo(17)">Acessórios do Windows</a>
-  <a onclick="navigateTo(18)">Manipulando Textos</a>
-    <p>Introdução à Internet</p>
-  <a onclick="navigateTo(19)">Microsoft Edge</a>
-  <a onclick="navigateTo(21)">Pesquisa na Web</a>
-  <a onclick="navigateTo(22)">Download de Arquivos</a>
-  <a onclick="navigateTo(23)">Download de Aplicativos e Programas</a>
-  <a onclick="navigateTo(24)">Google</a>
-  <a onclick="navigateTo(25)">Conta Microsoft</a>
-  <a onclick="navigateTo(26)">Sites Úteis</a>
-  <a onclick="navigateTo(27)">Cache e Cookies</a>
-    <p>Introdução ao Office</p>
-  <a onclick="navigateTo(28)">Microsoft Word</a>
-  <a onclick="navigateTo(29)">Microsoft PowerPoint</a>
-  <a onclick="navigateTo(30)">Microsoft Excel</a>
-  <a onclick="navigateTo(31)">Microsoft Publisher</a>
-    <p>Introdução à Informática Avançada</p>
-  <a onclick="navigateTo(32)">Esteja protegido</a>
-  <a onclick="navigateTo(33)">Senhas</a>
-  <a onclick="navigateTo(34)">Serviços de Nuvem</a>
-  <a onclick="navigateTo(35)">Instalação e Desinstalação de Aplicativos</a>
-  <a onclick="navigateTo(36)">Microsoft Defender</a>
-  <a onclick="navigateTo(37)">Gerenciador de Tarefas</a>
-  <a onclick="navigateTo(38)">Saúde do Computador</a>
-  <a onclick="navigateTo(39)">Limpeza de Disco</a>
-  <a onclick="navigateTo(40)">Verificação de Disco</a>
-  <a onclick="navigateTo(41)">Verificação de Arquivos</a>
-  <a onclick="navigateTo(42)">Modo de Segurança</a>
-  <a onclick="navigateTo(43)">Restauração, Backup e Formatação</a>
-    <p>O Sistema Operacional</p>
-  <a onclick="navigateTo(44)">A Pasta Raiz</a>
-  <a onclick="navigateTo(45)">Log de Eventos</a>
-  <a onclick="navigateTo(46)">Serviços</a>
-  <a onclick="navigateTo(47)">Drivers e Dispositivos</a>
-  <a onclick="navigateTo(48)">Agendador de Tarefas</a>
-  <a onclick="navigateTo(49)">Gerenciamento de Disco</a>
-  <a onclick="navigateTo(50)">Windows PowerShell</a>
-  <a onclick="navigateTo(51)">Rede e Compartilhamento</a>
-    <p>Próximos Passos</p>
-  <a onclick="navigateTo(52)">Próximos passos</a>
-  <a onclick="navigateTo(53)">Desenvolvimento de Software</a>
-  <a onclick="navigateTo(54)">Design Gráfico</a>
-  <a onclick="navigateTo(55)">Software Livre</a>
-    <p>O Autor</p>
-  <a onclick="navigateTo(56)">O Autor</a>
+<div class="js-side-left">
+  <a href="https://www.jorgesouza.com.br/informatica/intro">Introdução</a>
+  <p>O Computador</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oque">O que é um computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/software">Software e Hardware</a>
+  <a href="https://www.jorgesouza.com.br/informatica/gabinete">Gabinete e Periféricos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/processador">Processador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/placamae">Placa Mãe</a>
+  <a href="https://www.jorgesouza.com.br/informatica/discorigido">Disco Rígido e Disco Sólido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/memoriaram">Memória RAM</a>
+  <p>Introdução ao Windows</p>
+  <a href="https://www.jorgesouza.com.br/informatica/umpouco">Um pouco de História</a>
+  <a href="https://www.jorgesouza.com.br/informatica/oconceito">O Conceito de Janela</a>
+  <a href="https://www.jorgesouza.com.br/informatica/areatrabalho">Área de Trabalho</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mouse">Mouse</a>
+  <a href="https://www.jorgesouza.com.br/informatica/barratarefas">Barra de Tarefas e Menu Iniciar</a>
+  <a href="https://www.jorgesouza.com.br/informatica/configuracoes">Configurações do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/explorador">Explorador de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/teclado">Teclado</a>
+  <a href="https://www.jorgesouza.com.br/informatica/unidades">Unidades de Armazenamento</a>
+  <a href="https://www.jorgesouza.com.br/informatica/acessorios">Acessórios do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/manipulando">Manipulando Textos</a>
+  <p>Introdução à Internet</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msedge">Microsoft Edge</a>
+  <a href="https://www.jorgesouza.com.br/informatica/pesquisa">Pesquisa na Web</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadarquivos">Download de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadapps">Download de Aplicativos e Programas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/google">Google</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msaccount">Conta Microsoft</a>
+  <a href="https://www.jorgesouza.com.br/informatica/sitesuteis">Sites Úteis</a>
+  <a href="https://www.jorgesouza.com.br/informatica/cachecookies">Cache e Cookies</a>
+  <p>Introdução ao Office</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msword">Microsoft Word</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspowerpoint">Microsoft PowerPoint</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msexcel">Microsoft Excel</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspublisher">Microsoft Publisher</a>
+  <p>Introdução à Informática Avançada</p>
+  <a href="https://www.jorgesouza.com.br/informatica/esteja">Esteja protegido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/senhas">Senhas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/nuvem">Serviços de Nuvem</a>
+  <a href="https://www.jorgesouza.com.br/informatica/instalacao">Instalação e Desinstalação de Aplicativos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msdefender">Microsoft Defender</a>
+  <a href="https://www.jorgesouza.com.br/informatica/taskmgr">Gerenciador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/saude">Saúde do Computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/limpezadisco">Limpeza de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verdisco">Verificação de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verarquivos">Verificação de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/seguranca">Modo de Segurança</a>
+  <a href="https://www.jorgesouza.com.br/informatica/restauracao">Restauração, Backup e Formatação</a>
+  <p>O Sistema Operacional</p>
+  <a href="https://www.jorgesouza.com.br/informatica/raiz">A Pasta Raiz</a>
+  <a href="https://www.jorgesouza.com.br/informatica/log">Log de Eventos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/servicos">Serviços</a>
+  <a href="https://www.jorgesouza.com.br/informatica/drivers">Drivers e Dispositivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/agendador">Agendador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/diskmgmt">Gerenciamento de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/powershell">Microsoft PowerShell</a>
+  <a href="https://www.jorgesouza.com.br/informatica/rede">Rede e Compartilhamento</a>
+  <p>Próximos Passos</p>
+  <a href="https://www.jorgesouza.com.br/informatica/proximos">Próximos passos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/dev">Desenvolvimento de Software</a>
+  <a href="https://www.jorgesouza.com.br/informatica/design">Design Gráfico</a>
+  <a href="https://www.jorgesouza.com.br/informatica/opensource">Software Livre</a>
+  <p>O Autor</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oautor">O Autor</a>
 </div>
 
 
 <div class="js-page">
   <div class="js-post">
-    <button class="js-button" onclick="navigateTo(--post)">Anterior</button>
-    <button class="js-button" onclick="navigateTo(++post)" style="float: right;">Próximo</button>
+    <a class="js-button" href="">Anterior</a>
+    <a class="js-button" href="" style="float: right;">Próximo</a>
 
 
     <h1>Título</h1>
     <img src="oque1.png" alt="">
     <p>
-      Mussum Ipsum, cacilds vidis litro abertis. Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis.Si num tem leite então bota uma pinga aí cumpadi!Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis.Diuretics paradis num copo é motivis de denguis.
     </p>
-    <p>
-      Quem manda na minha terra sou euzis!Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!Cevadis im ampola pa arma uma pindureta.Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis.
-    </p>
-    <p>
-      Paisis, filhis, espiritis santis.Per aumento de cachacis, eu reclamis.Nullam volutpat risus nec leo commodo, ut interdum diam laoreet. Sed non consequat odio.Interagi no mé, cursus quis, vehicula ac nisi.
-    </p>
-    <p>
-      Aenean aliquam molestie leo, vitae iaculis nisl.Delegadis gente finis, bibendum egestas augue arcu ut est.In elementis mé pra quem é amistosis quis leo.Nullam volutpat risus nec leo commodo, ut interdum diam laoreet. Sed non consequat odio.
-    </p>
-<p>
-  A ordem dos tratores não altera o pão duris.Detraxit consequat et quo num tendi nada.Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose.Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis.
-</p>
   </div>
 </div>
-
 </html>
 
 <footer-bar></footer-bar>
