--- a/index.html
+++ b/index.html
@@ -117,13 +117,16 @@
 
 
 <div>
-  <div style="padding: 25px 10% 25px 10%;">
+  <div class="js-post" style="background-image: linear-gradient(#C00, #200); margin: 25px 5% 25px 5%; border: #FB05 1px solid; border-radius: 15px;">
+  <div style="display: inline-block; vertical-align: top;">
     <h3>Formação</h3>
     <ul>
       <li>Ensino Médio Completo</li>
       <li>Inglês Básico</li>
       <li>Espanhol Básico</li>
     </ul>
+  </div>
+  <div style="display: inline-block; vertical-align: top; margin-right: 25px;">
     <h3>Habilidades</h3>
     <ul>
       <li>Instrutor de Cursos Técnicos</li>
@@ -135,8 +138,9 @@
       <li>Desenvolvimento em C/C++</li>
     </ul>
   </div>
+  </div>
 
-  <div style="background-color: #333; color: white; padding: 25px 10% 25px 10%;">
+  <div class="js-post" style="background-image: linear-gradient(#A0A, #202); color: white; margin: 25px 5% 25px 5%; border: #FB05 1px solid; border-radius: 15px;">
     <h3>Carreira</h3>
     <p>
       Em 2007, com 18 anos, enquanto cursava o terceiro ano do ensino médio, e após concluir um curso de Design Gráfico na NIT Cursos, ingressei, por indicação do professor do curso, numa vaga de Designer Gráfico estagiário na Dignart Publicidade Visual, onde permaneci até 2009, trabalhando também como adesivador e na plotagem de projetos de AutoCAD, enquanto fazia o curso de AutoCAD, também na NIT Cursos, para me aperfeiçoar no trabalho de plotagem.
