--- a/javascript/menu.html
+++ b/javascript/menu.html
@@ -1,16 +1,25 @@
-<nav class="js-nav">
+<div class="js-nav">
   <ul>
-    <li><a href="../index.html">Início</a></li>
-    <li><a href="../Informatica/informatica.html">Informática</a></li>
-    <li class="js-drop-button">
-      <a>Programação <i class="seta"></i></a>
+    <li tabindex="1"><a href="https://www.jorgesouza.com.br/">Início</a></li>
+    <li class="js-drop-button" tabindex="2">
+      <a>Aprendizado <i class="seta"></i></a>
       <div class="js-drop-content">
-        <a href="../Web Design/webdesign.html">Web Design</a>
+        <a href="https://www.jorgesouza.com.br/informatica/intro">Informática</a>
+        <a href="#">Design Gráfico</a>
         <hr>
-        <a>em construção...</a>
+        <pre><small>Desenvolvimento Web:</small></pre>
+        <a>1. Web Design</a>
+        <a>2. Javascript</a>
+        <a>3. Aplicações Web e APIs</a>
+        <hr>
+        <pre><small>Programação:</small></pre>
+        <a>1. Desktop</a>
+        <a>2. Móvel</a>
+        <a>3. Gráficos e Multimídia</a>
+        <a>4. Jogos</a>
       </div>
     </li>
-    <li class="right"><a href="../Sobre/sobre.html">Sobre</a></li>
+    <li tabindex="3"><a>Apostilas</a></li>
   </ul>
   <style>
     .seta {
@@ -23,4 +32,4 @@
       margin: auto 5px auto 5px;
     }
   </style>
-</nav>
+</div>
