--- a/informatica/oque.html
+++ b/informatica/oque.html
@@ -17,77 +17,77 @@
 
 <menu-bar></menu-bar>
 <div class="js-side-left">
-  <a href="https://www.jorgesouza.com.bre/informatica/intro">Introdução</a>
+  <a href="https://www.jorgesouza.com.br/informatica/intro">Introdução</a>
   <p>O Computador</p>
-  <a href="https://www.jorgesouza.com.bre/informatica/oque">O que é um computador</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/software">Software e Hardware</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/gabinete">Gabinete e Periféricos</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/processador">Processador</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/placamae">Placa Mãe</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/discorigido">Disco Rígido e Disco Sólido</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/memoriaram">Memória RAM</a>
+  <a href="https://www.jorgesouza.com.br/informatica/oque">O que é um computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/software">Software e Hardware</a>
+  <a href="https://www.jorgesouza.com.br/informatica/gabinete">Gabinete e Periféricos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/processador">Processador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/placamae">Placa Mãe</a>
+  <a href="https://www.jorgesouza.com.br/informatica/discorigido">Disco Rígido e Disco Sólido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/memoriaram">Memória RAM</a>
   <p>Introdução ao Windows</p>
-  <a href="https://www.jorgesouza.com.bre/informatica/umpouco">Um pouco de História</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/oconceito">O Conceito de Janela</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/areatrabalho">Área de Trabalho</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/mouse">Mouse</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/barratarefas">Barra de Tarefas e Menu Iniciar</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/configuracoes">Configurações do Windows</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/explorador">Explorador de Arquivos</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/teclado">Teclado</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/unidades">Unidades de Armazenamento</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/acessorios">Acessórios do Windows</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/manipulando">Manipulando Textos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/umpouco">Um pouco de História</a>
+  <a href="https://www.jorgesouza.com.br/informatica/oconceito">O Conceito de Janela</a>
+  <a href="https://www.jorgesouza.com.br/informatica/areatrabalho">Área de Trabalho</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mouse">Mouse</a>
+  <a href="https://www.jorgesouza.com.br/informatica/barratarefas">Barra de Tarefas e Menu Iniciar</a>
+  <a href="https://www.jorgesouza.com.br/informatica/configuracoes">Configurações do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/explorador">Explorador de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/teclado">Teclado</a>
+  <a href="https://www.jorgesouza.com.br/informatica/unidades">Unidades de Armazenamento</a>
+  <a href="https://www.jorgesouza.com.br/informatica/acessorios">Acessórios do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/manipulando">Manipulando Textos</a>
   <p>Introdução à Internet</p>
-  <a href="https://www.jorgesouza.com.bre/informatica/msedge">Microsoft Edge</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/pesquisa">Pesquisa na Web</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/downloadarquivos">Download de Arquivos</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/downloadapps">Download de Aplicativos e Programas</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/google">Google</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/msaccount">Conta Microsoft</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/sitesuteis">Sites Úteis</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/cachecookies">Cache e Cookies</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msedge">Microsoft Edge</a>
+  <a href="https://www.jorgesouza.com.br/informatica/pesquisa">Pesquisa na Web</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadarquivos">Download de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadapps">Download de Aplicativos e Programas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/google">Google</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msaccount">Conta Microsoft</a>
+  <a href="https://www.jorgesouza.com.br/informatica/sitesuteis">Sites Úteis</a>
+  <a href="https://www.jorgesouza.com.br/informatica/cachecookies">Cache e Cookies</a>
   <p>Introdução ao Office</p>
-  <a href="https://www.jorgesouza.com.bre/informatica/msword">Microsoft Word</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/mspowerpoint">Microsoft PowerPoint</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/msexcel">Microsoft Excel</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/mspublisher">Microsoft Publisher</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msword">Microsoft Word</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspowerpoint">Microsoft PowerPoint</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msexcel">Microsoft Excel</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspublisher">Microsoft Publisher</a>
   <p>Introdução à Informática Avançada</p>
-  <a href="https://www.jorgesouza.com.bre/informatica/esteja">Esteja protegido</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/senhas">Senhas</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/nuvem">Serviços de Nuvem</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/instalacao">Instalação e Desinstalação de Aplicativos</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/msdefender">Microsoft Defender</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/taskmgr">Gerenciador de Tarefas</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/saude">Saúde do Computador</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/limpezadisco">Limpeza de Disco</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/verdisco">Verificação de Disco</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/verarquivos">Verificação de Arquivos</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/seguranca">Modo de Segurança</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/restauracao">Restauração, Backup e Formatação</a>
+  <a href="https://www.jorgesouza.com.br/informatica/esteja">Esteja protegido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/senhas">Senhas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/nuvem">Serviços de Nuvem</a>
+  <a href="https://www.jorgesouza.com.br/informatica/instalacao">Instalação e Desinstalação de Aplicativos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msdefender">Microsoft Defender</a>
+  <a href="https://www.jorgesouza.com.br/informatica/taskmgr">Gerenciador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/saude">Saúde do Computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/limpezadisco">Limpeza de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verdisco">Verificação de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verarquivos">Verificação de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/seguranca">Modo de Segurança</a>
+  <a href="https://www.jorgesouza.com.br/informatica/restauracao">Restauração, Backup e Formatação</a>
   <p>O Sistema Operacional</p>
-  <a href="https://www.jorgesouza.com.bre/informatica/raiz">A Pasta Raiz</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/log">Log de Eventos</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/servicos">Serviços</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/drivers">Drivers e Dispositivos</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/agendador">Agendador de Tarefas</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/diskmgmt">Gerenciamento de Disco</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/powershell">Microsoft PowerShell</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/rede">Rede e Compartilhamento</a>
+  <a href="https://www.jorgesouza.com.br/informatica/raiz">A Pasta Raiz</a>
+  <a href="https://www.jorgesouza.com.br/informatica/log">Log de Eventos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/servicos">Serviços</a>
+  <a href="https://www.jorgesouza.com.br/informatica/drivers">Drivers e Dispositivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/agendador">Agendador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/diskmgmt">Gerenciamento de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/powershell">Microsoft PowerShell</a>
+  <a href="https://www.jorgesouza.com.br/informatica/rede">Rede e Compartilhamento</a>
   <p>Próximos Passos</p>
-  <a href="https://www.jorgesouza.com.bre/informatica/proximos">Próximos passos</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/dev">Desenvolvimento de Software</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/design">Design Gráfico</a>
-  <a href="https://www.jorgesouza.com.bre/informatica/opensource">Software Livre</a>
+  <a href="https://www.jorgesouza.com.br/informatica/proximos">Próximos passos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/dev">Desenvolvimento de Software</a>
+  <a href="https://www.jorgesouza.com.br/informatica/design">Design Gráfico</a>
+  <a href="https://www.jorgesouza.com.br/informatica/opensource">Software Livre</a>
   <p>O Autor</p>
-  <a href="https://www.jorgesouza.com.bre/informatica/oautor">O Autor</a>
+  <a href="https://www.jorgesouza.com.br/informatica/oautor">O Autor</a>
 </div>
 
 
 <div class="js-page">
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.bre/informatica/intro" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.bre/informatica/software" class="js-button" style="float: right;">Próximo</a>
+    <a href="https://www.jorgesouza.com.br/informatica/intro" class="js-button">Anterior</a>
+    <a href="https://www.jorgesouza.com.br/informatica/software" class="js-button" style="float: right;">Próximo</a>
 
 
     <h1>O que é um computador</h1>
