--- a/informatica/gabinete.html
+++ b/informatica/gabinete.html
@@ -85,17 +85,14 @@
 
 <div class="js-page">
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.br/informatica/oque" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.br/informatica/gabinete" class="js-button" style="float: right;">Próximo</a>
+    <a href="https://www.jorgesouza.com.br/informatica/software" class="js-button">Anterior</a>
+    <a href="https://www.jorgesouza.com.br/informatica/processador" class="js-button" style="float: right;">Próximo</a>
 
 
-    <h1>O que é um computador</h1>
-    <img src="oque1.png" alt="">
+    <h1>Gabinete e Periféricos</h1>
+    <img src="gabinete.png" alt="">
     <p>
-        Todo computador, smartphone ou tablet possui um Sistema Operacional, é o que faz o aparelho ligar, desligar e executar programas e aplicativos, e todos eles juntos formam o software do aparelho. O software só funciona pois opera o hardware, ou seja, os chips, unidades de armazenamento, dispositivos externos etc. 
-    </p>
-    <p>
-        Resumindo, tudo o que vemos na tela é software, e a tela e tudo o que podemos pegar, trocar, desligar ou quebrar é hardware. Veremos um pouco sobre os hardwares que compõem um computador nos próximos parágrafos.
+        Apesar de tratarmos todo o conjunto de equipamentos que utilizamos num computador como se todos fossem o próprio computador, na verdade, os que podem ser desligados sem desligar o computador (teclado, mouse, monitor, impressora...) são os periféricos, e conectam-se ao gabinete, dentro do gabinete, vários aparelhos auxiliam o processador no trabalho, entre eles estão o disco onde armazenamos nossos dados e programas, a memória RAM onde os programas são executados, a placa de vídeo, de áudio, de usb, entre outros, mas quem computa os dados realmente é o processador, sem ele a mágica não seria possível.
     </p>
     </div>
 </div>
