--- a/informatica/software.html
+++ b/informatica/software.html
@@ -89,7 +89,7 @@
     <a href="https://www.jorgesouza.com.br/informatica/gabinete" class="js-button" style="float: right;">Próximo</a>
 
 
-    <h1>O que é um computador</h1>
+    <h1>Software e Hardware</h1>
     <img src="software.png" alt="">
     <p>
         Todo computador, smartphone ou tablet possui um Sistema Operacional, é o que faz o aparelho ligar, desligar e executar programas e aplicativos, e todos eles juntos formam o software do aparelho. O software só funciona pois opera o hardware, ou seja, os chips, unidades de armazenamento, dispositivos externos etc. 
