--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <li class="js-drop-button" tabindex="2">
       <a>Aprendizado <i class="seta"></i></a>
       <div class="js-drop-content">
-        <a href="informatica/intro.html">Informática</a>
-        <a href="Web Design/webdesign.html">Design Gráfico</a>
+        <a href="informatica/intro">Informática</a>
+        <a href="Web Design/webdesign">Design Gráfico</a>
         <hr>
         <pre><small>Desenvolvimento Web:</small></pre>
         <a>1. Web Design</a>
@@ -105,7 +105,10 @@
     width: 100%;
     grid-template-rows: 1fr;
   }
-  .banner img {width: 100%;}
+  .banner img {
+    width: 100%;
+    pointer-events: none;
+  }
   .banner {
     top: 0;
     grid-row: 1;
@@ -157,7 +160,7 @@
 <div class="js-footer">
   <div style="min-width: 300px;">
     <tit>Aprendizado On-Line</tit>
-    <par onclick="window.location.replace(`https://www.jorgesouza.com.br/informatica/intro.html`)">Informática Básica e Avançada</par>
+    <par onclick="window.location.replace(`https://www.jorgesouza.com.br/informatica/intro`)">Informática Básica e Avançada</par>
     <par onclick="window.location.replace(`#`)">Design Gráfico</par>
     <par onclick="window.location.replace(`#`)">Web Design (HTML e CSS)</par>
     <par onclick="window.location.replace(`#`)">Javascript (Front-End e Back-End)</par>
@@ -168,9 +171,9 @@
   </div>
   <div style="min-width: 300px;">
     <tit>Manuais e Apostilas</tit>
-    <par onclick="window.location.replace(`Informatica/informatica.html`)">Informática Básica e Avançada</par>
+    <par onclick="window.location.replace(`#`)">Informática Básica e Avançada</par>
     <par onclick="window.location.replace(`#`)">Design Gráfico</par>
-    <par onclick="window.location.replace(`Web Design/webdesign.html`)">Web Design (HTML e CSS)</par>
+    <par onclick="window.location.replace(`#`)">Web Design (HTML e CSS)</par>
     <par onclick="window.location.replace(`#`)">Javascript (Front-End e Back-End)</par>
     <par onclick="window.location.replace(`#`)">Programação de Gráficos e Multimídia</par>
     <par onclick="window.location.replace(`#`)">Programação para PC Desktop</par>
