--- a/informatica/oconceito.html
+++ b/informatica/oconceito.html
@@ -1,1 +1,151 @@
-oconceito
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords" content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+
+<div class="js-side-left">
+  <a href="https://www.jorgesouza.com.br/informatica/intro">Introdução</a>
+  <p>O Computador</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oque">O que é um computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/software">Software e Hardware</a>
+  <a href="https://www.jorgesouza.com.br/informatica/gabinete">Gabinete e Periféricos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/processador">Processador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/placamae">Placa Mãe</a>
+  <a href="https://www.jorgesouza.com.br/informatica/discorigido">Disco Rígido e Disco Sólido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/memoriaram">Memória RAM</a>
+  <p>Introdução ao Windows</p>
+  <a href="https://www.jorgesouza.com.br/informatica/umpouco">Um pouco de História</a>
+  <a href="https://www.jorgesouza.com.br/informatica/oconceito">O Conceito de Janela</a>
+  <a href="https://www.jorgesouza.com.br/informatica/areatrabalho">Área de Trabalho</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mouse">Mouse</a>
+  <a href="https://www.jorgesouza.com.br/informatica/barratarefas">Barra de Tarefas e Menu Iniciar</a>
+  <a href="https://www.jorgesouza.com.br/informatica/configuracoes">Configurações do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/explorador">Explorador de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/teclado">Teclado</a>
+  <a href="https://www.jorgesouza.com.br/informatica/unidades">Unidades de Armazenamento</a>
+  <a href="https://www.jorgesouza.com.br/informatica/acessorios">Acessórios do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/manipulando">Manipulando Textos</a>
+  <p>Introdução à Internet</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msedge">Microsoft Edge</a>
+  <a href="https://www.jorgesouza.com.br/informatica/pesquisa">Pesquisa na Web</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadarquivos">Download de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadapps">Download de Aplicativos e Programas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/google">Google</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msaccount">Conta Microsoft</a>
+  <a href="https://www.jorgesouza.com.br/informatica/sitesuteis">Sites Úteis</a>
+  <a href="https://www.jorgesouza.com.br/informatica/cachecookies">Cache e Cookies</a>
+  <p>Introdução ao Office</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msword">Microsoft Word</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspowerpoint">Microsoft PowerPoint</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msexcel">Microsoft Excel</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspublisher">Microsoft Publisher</a>
+  <p>Introdução à Informática Avançada</p>
+  <a href="https://www.jorgesouza.com.br/informatica/esteja">Esteja protegido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/senhas">Senhas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/nuvem">Serviços de Nuvem</a>
+  <a href="https://www.jorgesouza.com.br/informatica/instalacao">Instalação e Desinstalação de Aplicativos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msdefender">Microsoft Defender</a>
+  <a href="https://www.jorgesouza.com.br/informatica/taskmgr">Gerenciador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/saude">Saúde do Computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/limpezadisco">Limpeza de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verdisco">Verificação de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verarquivos">Verificação de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/seguranca">Modo de Segurança</a>
+  <a href="https://www.jorgesouza.com.br/informatica/restauracao">Restauração, Backup e Formatação</a>
+  <p>O Sistema Operacional</p>
+  <a href="https://www.jorgesouza.com.br/informatica/raiz">A Pasta Raiz</a>
+  <a href="https://www.jorgesouza.com.br/informatica/log">Log de Eventos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/servicos">Serviços</a>
+  <a href="https://www.jorgesouza.com.br/informatica/drivers">Drivers e Dispositivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/agendador">Agendador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/diskmgmt">Gerenciamento de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/powershell">Microsoft PowerShell</a>
+  <a href="https://www.jorgesouza.com.br/informatica/rede">Rede e Compartilhamento</a>
+  <p>Próximos Passos</p>
+  <a href="https://www.jorgesouza.com.br/informatica/proximos">Próximos passos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/dev">Desenvolvimento de Software</a>
+  <a href="https://www.jorgesouza.com.br/informatica/design">Design Gráfico</a>
+  <a href="https://www.jorgesouza.com.br/informatica/opensource">Software Livre</a>
+  <p>O Autor</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oautor">O Autor</a>
+</div>
+
+
+<div class="js-page">
+  <div class="js-post">
+    <a href="https://www.jorgesouza.com.br/informatica/umpouco" class="js-button">Anterior</a>
+    <a href="https://www.jorgesouza.com.br/informatica/areatrabalho" class="js-button" style="float: right;">Próximo</a>
+
+
+    <h1>O conceito de Janela</h1>
+    <img src="oconceito.png">
+    <p>
+        A tradução exata da palavra Windows em português é “janelas” e este termo também é utilizado em várias situações dentro do sistema operacional. 
+    </p>
+    <p>
+        Temos dois tipos de janelas, as janelas de aplicativos, ou programas, e as janelas de pastas, isso sem contar com as caixas de diálogo. As pastas são os locais onde podemos guardar arquivos, e a navegação pelas pastas é feita pelo aplicativo Explorador de Arquivos. A janela principal que dá acesso a tudo num computador é a Área de Trabalho, em casos de utilizarmos o Windows em um Tablet Surface ou mesmo no PC em Modo Tablet, a janela principal será o Menu Iniciar.
+    </p>
+    <p>
+        No Windows, uma janela é composta de uma área central com as opções do aplicativo, e uma barra horizontal no topo chamada de Barra de Títulos, onde podemos encontrar o título da aplicação em questão, e três ícones, respectivamente: minimizar, centralizar/restaurar e maximizar – utilizados para redimensionar o tamanho das janelas. 
+    </p>
+
+    <h2>Janelas e caixas de diálogo</h2>
+    <p>
+        Como vimos, janelas exibem as opções de um determinado aplicativo. Muitos aplicativos podem abrir, em certo momento, outro tipo de janela que é uma caixa de diálogo. Geralmente menor e com bem menos opções, uma caixa de diálogo costuma ser exibida quando uma informação deve ser emitida ao usuário alertando-o sobre algo que está acontecendo com a aplicação, ou pedindo uma ação do usuário. Por exemplo, ao tentarmos excluir um arquivo ou pasta, uma caixa de diálogo é exibida solicitando confirmação.
+    </p>
+    <img src="oconceito2.png">
+
+    <h2>Arquivos e pastas</h2>
+    <p>
+        Pastas são locais onde guardamos nossos arquivos e referem-se unicamente aos caminhos onde estes arquivos estão armazenados dentro do Disco Rígido ou da Unidade de Armazenamento, portanto, pastas não ocupam espaço significativo na memória do computador. Enquanto arquivos são as informações que armazenamos, cada arquivo possui seu tipo específico, podemos ter arquivos de texto, de imagem, de áudio e assim por diante. O tamanho, ou espaço que um arquivo pode ocupar em disco, varia de acordo com a quantidade de informação que um arquivo contém.
+    </p>
+    <h2>Unidades de medida</h2>
+    <p>
+        As unidades de medida utilizadas para determinar a quantidade de espaço que um arquivo ocupa são medidas em bytes, os bytes podem armazenar oito dígitos binários, 0 ou 1, chamados de bit, que é a forma como o processador entende as informações. Por exemplo, um arquivo de texto simples, sem formatação com uma letra ‘a’ terá um byte, se este arquivo tiver ‘ab’ terá dois bytes, pois armazena dois caracteres, e cada caractere ocupa um byte. Tendo o byte como ponto de partida usamos uma escala que aumenta de mil em mil assim:
+    </p>
+    <p>
+        Bit: Um dígito binário. 
+    </p>
+    <p>
+        Byte: 8 bits. Espaço necessário para armazenar um caractere.
+    </p>
+    <p>
+        Kilo-Byte: Mil bytes.
+    </p>
+    <p>
+        Mega-Byte: Um milhão de bytes ou mil kilobytes.
+    </p>
+    <p>
+        Giga-Byte: Um bilhão de bytes ou mil megabytes.
+    </p>
+    <p>
+        Tera-Byte: Um trilhão de bytes ou mil gigabytes.
+    </p>
+    <h2>Ajuda e Tooltips</h2>
+    <p>
+        O Windows possui um serviço chamado Tooltip que exibe informações sobre praticamente tudo para onde o mouse aponta, de forma que ao paramos a seta do mouse sobre um botão ou link, o nome daquele botão será exibido em uma pequena caixa próxima ao ponteiro.
+    </p>
+    <p>
+        Caso a informação seja insuficiente, podemos acessar um menu de ajuda sobre o aplicativo que está aberto pressionando a tecla F1 do teclado (no canto superior esquerdo do teclado). A maioria dos aplicativos possuem um menu de ajuda, no entanto alguns requerem conexão com a internet.
+    </p>
+
+    </div>
+</div>
+</html>
+
+<footer-bar></footer-bar>
+<btn-up></btn-up>
