--- a/informatica/processador.html
+++ b/informatica/processador.html
@@ -92,7 +92,7 @@
     <h1>Processador</h1>
     <img src="processador.png" alt="">
     <p>
-        Apesar de tratarmos todo o conjunto de equipamentos que utilizamos num computador como se todos fossem o próprio computador, na verdade, os que podem ser desligados sem desligar o computador (teclado, mouse, monitor, impressora...) são os periféricos, e conectam-se ao gabinete, dentro do gabinete, vários aparelhos auxiliam o processador no trabalho, entre eles estão o disco onde armazenamos nossos dados e programas, a memória RAM onde os programas são executados, a placa de vídeo, de áudio, de usb, entre outros, mas quem computa os dados realmente é o processador, sem ele a mágica não seria possível.
+      O microprocessador é um circuito integrado que realiza as funções de cálculo e tomada de decisão de um computador. É responsável pela execução das instruções num sistema e determina, em certa medida, a capacidade de processamento do computador e também o conjunto primário de instruções que ele compreende. Embora seja a essência do computador, o microprocessador não pode ser considerado um computador completo. Para que possa interagir com o usuário, ele precisa de uma série de componentes e conversores de sinais entre outros. Cada um desses circuitos de apoio interage de modo peculiar com os programas e, dessa forma, ajuda a moldar o funcionamento do computador.
     </p>
     </div>
 </div>
