--- a/informatica/areatrabalho.html
+++ b/informatica/areatrabalho.html
@@ -1,1 +1,125 @@
-areatrabalho
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords" content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+
+<div class="js-side-left">
+  <a href="https://www.jorgesouza.com.br/informatica/intro">Introdução</a>
+  <p>O Computador</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oque">O que é um computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/software">Software e Hardware</a>
+  <a href="https://www.jorgesouza.com.br/informatica/gabinete">Gabinete e Periféricos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/processador">Processador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/placamae">Placa Mãe</a>
+  <a href="https://www.jorgesouza.com.br/informatica/discorigido">Disco Rígido e Disco Sólido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/memoriaram">Memória RAM</a>
+  <p>Introdução ao Windows</p>
+  <a href="https://www.jorgesouza.com.br/informatica/umpouco">Um pouco de História</a>
+  <a href="https://www.jorgesouza.com.br/informatica/oconceito">O Conceito de Janela</a>
+  <a href="https://www.jorgesouza.com.br/informatica/areatrabalho">Área de Trabalho</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mouse">Mouse</a>
+  <a href="https://www.jorgesouza.com.br/informatica/barratarefas">Barra de Tarefas e Menu Iniciar</a>
+  <a href="https://www.jorgesouza.com.br/informatica/configuracoes">Configurações do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/explorador">Explorador de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/teclado">Teclado</a>
+  <a href="https://www.jorgesouza.com.br/informatica/unidades">Unidades de Armazenamento</a>
+  <a href="https://www.jorgesouza.com.br/informatica/acessorios">Acessórios do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/manipulando">Manipulando Textos</a>
+  <p>Introdução à Internet</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msedge">Microsoft Edge</a>
+  <a href="https://www.jorgesouza.com.br/informatica/pesquisa">Pesquisa na Web</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadarquivos">Download de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadapps">Download de Aplicativos e Programas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/google">Google</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msaccount">Conta Microsoft</a>
+  <a href="https://www.jorgesouza.com.br/informatica/sitesuteis">Sites Úteis</a>
+  <a href="https://www.jorgesouza.com.br/informatica/cachecookies">Cache e Cookies</a>
+  <p>Introdução ao Office</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msword">Microsoft Word</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspowerpoint">Microsoft PowerPoint</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msexcel">Microsoft Excel</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspublisher">Microsoft Publisher</a>
+  <p>Introdução à Informática Avançada</p>
+  <a href="https://www.jorgesouza.com.br/informatica/esteja">Esteja protegido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/senhas">Senhas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/nuvem">Serviços de Nuvem</a>
+  <a href="https://www.jorgesouza.com.br/informatica/instalacao">Instalação e Desinstalação de Aplicativos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msdefender">Microsoft Defender</a>
+  <a href="https://www.jorgesouza.com.br/informatica/taskmgr">Gerenciador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/saude">Saúde do Computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/limpezadisco">Limpeza de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verdisco">Verificação de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verarquivos">Verificação de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/seguranca">Modo de Segurança</a>
+  <a href="https://www.jorgesouza.com.br/informatica/restauracao">Restauração, Backup e Formatação</a>
+  <p>O Sistema Operacional</p>
+  <a href="https://www.jorgesouza.com.br/informatica/raiz">A Pasta Raiz</a>
+  <a href="https://www.jorgesouza.com.br/informatica/log">Log de Eventos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/servicos">Serviços</a>
+  <a href="https://www.jorgesouza.com.br/informatica/drivers">Drivers e Dispositivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/agendador">Agendador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/diskmgmt">Gerenciamento de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/powershell">Microsoft PowerShell</a>
+  <a href="https://www.jorgesouza.com.br/informatica/rede">Rede e Compartilhamento</a>
+  <p>Próximos Passos</p>
+  <a href="https://www.jorgesouza.com.br/informatica/proximos">Próximos passos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/dev">Desenvolvimento de Software</a>
+  <a href="https://www.jorgesouza.com.br/informatica/design">Design Gráfico</a>
+  <a href="https://www.jorgesouza.com.br/informatica/opensource">Software Livre</a>
+  <p>O Autor</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oautor">O Autor</a>
+</div>
+
+
+<div class="js-page">
+  <div class="js-post">
+    <a href="https://www.jorgesouza.com.br/informatica/oconceito" class="js-button">Anterior</a>
+    <a href="https://www.jorgesouza.com.br/informatica/mouse" class="js-button" style="float: right;">Próximo</a>
+
+
+    <h1>Área de Trabalho</h1>
+    <img src="areatrabalho.jpg">
+    <p>
+        Ao ligarmos um computador, algumas vezes encontraremos uma tela de início ou de boas-vindas, em alguns casos, será solicitado uma senha, caso o usuário a tenha implementado. Passado essa etapa entraremos na Área de Trabalho.
+    </p>
+    <p>
+        Na Área de Trabalho, encontramos alguns ícones de pastas como Documentos e Imagens, essas pastas, assim como a própria Área de Trabalho estão localizadas realmente na pasta do Usuário, que normalmente fica na unidade C:, a unidade virtual onde o Windows fica instalado. 
+    </p>
+    <p>
+        A Área de Trabalho é o ponto de partida para tudo o que faremos no computador, seja acessar a internet, abrir uma pasta, um aplicativo ou gerenciar nossos arquivos.
+    </p>
+    <h2>Visão de Tarefas</h2>
+    <p>
+        O Windows 10 permite múltiplas Áreas de Trabalho, de forma que você pode gerenciar várias estações para um mesmo usuário, por exemplo, em uma, você gerencia suas vendas, com todas as aplicações que necessitar para controle de estoque, fluxo de caixa, finanças etc., em outra você gerencia múltiplas caixas de entrada de e-mail, e chats com os clientes, e assim por diante.
+    </p>
+    <p>
+        Para gerenciar as áreas de trabalho utilizamos a Visão de Tarefas, que pode ser acessada por seu ícone na Barra de Tarefas, ou pelo atalho ⊞+D.
+    </p>
+    <img src="areatrabalho2.jpg">
+    <p class="notas">
+        Você pode criar quantas Áreas de Trabalho forem necessárias e dar um nome para cada uma delas. Na Visão de Tarefas você tem acesso ainda à Linha do Tempo que exibe os arquivos abertos e as aplicações utilizadas recorrentemente.
+    </p>
+    <h2>Exibição em cascata</h2>
+    <p>
+        Desde a versão 1.0 do Windows, já era possível a utilização de várias janelas ao mesmo tempo. O Windows conta com uma forma de organizar as janelas dividindo o espaço da tela de forma a facilitar sua visualização, esse recurso recebeu vários aprimoramentos. A exibição lado-a-lado e em cascata, permite a visualização de janelas umas sobre as outras ou ocupando porções proporcionais da tela. Para utilizar duas janelas lado-a-lado, basta segurar na barra de títulos e arrastar para a extremidade lateral, que o próprio sistema operacional ajustará suas dimensões. Para que uma janela utilize um quarto de tamanho da área visível, basta arrastá-la para um dos cantos.
+    </p>
+    <img src="areatrabalho3.jpg">
+  </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
+
