--- a/informatica/mouse.html
+++ b/informatica/mouse.html
@@ -1,1 +1,127 @@
-mouse
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords" content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+
+<div class="js-side-left">
+  <a href="https://www.jorgesouza.com.br/informatica/intro">Introdução</a>
+  <p>O Computador</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oque">O que é um computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/software">Software e Hardware</a>
+  <a href="https://www.jorgesouza.com.br/informatica/gabinete">Gabinete e Periféricos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/processador">Processador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/placamae">Placa Mãe</a>
+  <a href="https://www.jorgesouza.com.br/informatica/discorigido">Disco Rígido e Disco Sólido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/memoriaram">Memória RAM</a>
+  <p>Introdução ao Windows</p>
+  <a href="https://www.jorgesouza.com.br/informatica/umpouco">Um pouco de História</a>
+  <a href="https://www.jorgesouza.com.br/informatica/oconceito">O Conceito de Janela</a>
+  <a href="https://www.jorgesouza.com.br/informatica/areatrabalho">Área de Trabalho</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mouse">Mouse</a>
+  <a href="https://www.jorgesouza.com.br/informatica/barratarefas">Barra de Tarefas e Menu Iniciar</a>
+  <a href="https://www.jorgesouza.com.br/informatica/configuracoes">Configurações do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/explorador">Explorador de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/teclado">Teclado</a>
+  <a href="https://www.jorgesouza.com.br/informatica/unidades">Unidades de Armazenamento</a>
+  <a href="https://www.jorgesouza.com.br/informatica/acessorios">Acessórios do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/manipulando">Manipulando Textos</a>
+  <p>Introdução à Internet</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msedge">Microsoft Edge</a>
+  <a href="https://www.jorgesouza.com.br/informatica/pesquisa">Pesquisa na Web</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadarquivos">Download de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadapps">Download de Aplicativos e Programas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/google">Google</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msaccount">Conta Microsoft</a>
+  <a href="https://www.jorgesouza.com.br/informatica/sitesuteis">Sites Úteis</a>
+  <a href="https://www.jorgesouza.com.br/informatica/cachecookies">Cache e Cookies</a>
+  <p>Introdução ao Office</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msword">Microsoft Word</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspowerpoint">Microsoft PowerPoint</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msexcel">Microsoft Excel</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspublisher">Microsoft Publisher</a>
+  <p>Introdução à Informática Avançada</p>
+  <a href="https://www.jorgesouza.com.br/informatica/esteja">Esteja protegido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/senhas">Senhas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/nuvem">Serviços de Nuvem</a>
+  <a href="https://www.jorgesouza.com.br/informatica/instalacao">Instalação e Desinstalação de Aplicativos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msdefender">Microsoft Defender</a>
+  <a href="https://www.jorgesouza.com.br/informatica/taskmgr">Gerenciador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/saude">Saúde do Computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/limpezadisco">Limpeza de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verdisco">Verificação de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verarquivos">Verificação de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/seguranca">Modo de Segurança</a>
+  <a href="https://www.jorgesouza.com.br/informatica/restauracao">Restauração, Backup e Formatação</a>
+  <p>O Sistema Operacional</p>
+  <a href="https://www.jorgesouza.com.br/informatica/raiz">A Pasta Raiz</a>
+  <a href="https://www.jorgesouza.com.br/informatica/log">Log de Eventos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/servicos">Serviços</a>
+  <a href="https://www.jorgesouza.com.br/informatica/drivers">Drivers e Dispositivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/agendador">Agendador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/diskmgmt">Gerenciamento de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/powershell">Microsoft PowerShell</a>
+  <a href="https://www.jorgesouza.com.br/informatica/rede">Rede e Compartilhamento</a>
+  <p>Próximos Passos</p>
+  <a href="https://www.jorgesouza.com.br/informatica/proximos">Próximos passos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/dev">Desenvolvimento de Software</a>
+  <a href="https://www.jorgesouza.com.br/informatica/design">Design Gráfico</a>
+  <a href="https://www.jorgesouza.com.br/informatica/opensource">Software Livre</a>
+  <p>O Autor</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oautor">O Autor</a>
+</div>
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="https://www.jorgesouza.com.br/informatica/areatrabalho" class="js-button">Anterior</a>
+    <a href="https://www.jorgesouza.com.br/informatica/barratarefas" class="js-button" style="float: right;">Próximo</a>
+
+
+
+
+<!-- #region    ============    POST    ===================   -->
+
+    <h1>Mouse</h1>
+    <p>	O mouse é um dispositivo apontador fundamental para a utilização de um computador. A maioria dos mouses possui três botões, sendo um botão esquerdo, LMB (Left Mouse Button), um botão direito, RMB (Right Mouse Button) e um botão central rolante, a Scroll.</p>
+    <img src="mouse.png" alt="">
+    
+    
+    <h2>Botão Esquerdo do Mouse</h2>
+    <p>	O botão esquerdo do mouse é o botão de seleção, ou botão acionador, com ele clicamos em links, abrimos pastas e arquivos, selecionamos objetos entre outras coisas, o botão esquerdo tem quatro funções:</p>
+    <p>	<ins> Simples do Botão Esquerdo:</ins> O clique comum, ou clique simples é usado para selecionar objetos ou entrar em páginas de internet. No explorador de arquivos, um clique simples seleciona uma pasta ou arquivo, em menus o clique simples acessa uma opção.</p>
+    <p>	<ins> Duplo do Botão Esquerdo:</ins> O clique duplo é o ato de clicar duas vezes rapidamente com o botão esquerdo, é usado para abrir arquivos e pastas, mas outros programas podem configurar funções diferentes para o clique duplo do mouse.</p>
+    <p>	<ins> Triplo do Botão Esquerdo:</ins> Apesar de raro, o clique triplo é utilizado em alguns programas, geralmente para selecionar toda uma coleção de objetos onde um clique duplo seleciona um dos objetos na coleção. Por exemplo, no Word um clique simples posiciona o cursor no meio de uma palavra, um clique duplo seleciona a palavra inteira, e o clique triplo seleciona todo o parágrafo.</p>
+    <p>	<ins>Arraste do Botão Esquerdo:</ins> O arraste do botão esquerdo do mouse, também chamado de arrastar e soltar, é uma função usada para mover objetos de um lugar para o outro, consistem em clicar, segurar o botão ainda clicado, levar o mouse até outro lugar da tela e então soltar o botão. Essa função é usada para desenhar em programas gráficos e selecionar textos e objetos em diversos editores.</p>
+    <h2>Botão Direito do Mouse</h2>
+    <p>	O botão direito do mouse, também chamado de Botão Auxiliar, na maioria dos programas tem a função de menu, quando clicado exibe certa quantidade de opções relativas ao programa ou pasta em questão. Em alguns programas esse botão pode possuir função de arraste.</p>
+    <h2>Scroll</h2>
+    <p>	A scroll, também chamada de roda do mouse, ou botão do meio é usada para rolar, ou seja, subir e descer entre páginas, e em muitos casos também para aumentar ou diminuir o zoom em uma tela. A Scroll possui quatro funções:</p>
+    <p><ins>Giro da Scroll:</ins> O giro da Scroll consiste em puxá-la para trás ou empurrá-la para frente e é usado para descer ou subir em páginas e aumentar ou diminuir o zoom em telas.</p>
+    <p><ins>Clique da Scroll:</ins> O clique da Scroll é configurado de forma diferente em diferentes programas, pode ser usado para mover a tela, fechar páginas entre outras funções.</p>
+    <p><ins>Arraste:</ins> Em softwares gráficos e editores a Scroll também tem a função de arrastar e soltar, essa função costuma ser usada para mover a tela.</p>
+    <p><ins>Clique Duplo da Scroll:</ins> Apesar de raro, em alguns editores a Scroll também possui função de clique duplo, que geralmente é usada para dar um zoom em todos os objetos presentes na tela.</p>
+
+
+
+<!-- #endregion -->
+
+
+    </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
+
