--- a/informatica/barratarefas.html
+++ b/informatica/barratarefas.html
@@ -16,6 +16,9 @@
 
 
 <menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+
+
 
 <div class="js-side-left">
   <a href="https://www.jorgesouza.com.br/informatica/intro">Introdução</a>
