--- a/informatica/gabinete.html
+++ b/informatica/gabinete.html
@@ -15,6 +15,9 @@
 </head>
 
 <menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+
+
 <div class="js-side-left">
   <a href="https://www.jorgesouza.com.br/informatica/intro">Introdução</a>
   <p>O Computador</p>
